// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "./Ack.proto";


package ackRequest.protobuf;

message AckRequest {
extensions 5 to 105;

  optional ccsds_mal.protobuf.TIME ackRequestDate = 1;
  optional ccsds_mal.protobuf.TIME systemDate = 2;
  optional ackRequest.protobuf.Ack ack = 3;
  optional ccsds_mal.protobuf.STRING comment = 4;
}
